<resources>
    <string name="app_name">Tully</string>
    <string name="facebook_app_id">1826726547641781</string>
    <string name="fb_login_protocol_scheme">fb1826726547641781</string>
    <string name="title_activity_onboarding">OnboardingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="play">Play</string>
    <string name="write">Write</string>
    <string name="record">Record</string>
    <string name="sign_up">Sign up</string>
    <string name="log_in">Log in</string>
    <string name="songwriting_starts_here">Songwriting starts here.</string>
    <string name="save_and_play_your_music_with_tully">Save and play your music with tully</string>
    <string name="creative_writing">Creative Writing</string>
    <string name="write_your_lyrics_and_link_them_to_an_audio_file">Write your lyrics and link them to an audio file.</string>
    <string name="catch_a_vibe">Catch a vibe</string>
    <string name="record_with_the_music_playing_while_looking_at_your_lyrics">Record with the music playing while looking at your lyrics</string>
    <string name="one_touch_sign">One Touch Sign</string>
    <string name="fingerprint_sign_in_makes_your_app_login_much_faster">Fingerprint sign in makes your app login much faster.</string>
    <string name="facebook">Facebook</string>
    <string name="forgot_your_password_get_help">Forgot your password? Get help</string>
    <string name="by_logging_in_you_agree">By logging in, you agree to</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="our_terms">our Terms</string>
    <string name="by_singup_you_agree_to">by singup, you agree to</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="enter_your_email_below_to_receive_your_password_reset_instructions">Enter your email below to receive your password reset instructions</string>
    <string name="let_s_start">Let\'s start</string>
    <string name="select_the_options_that_best_describe_you">Select the Options that Best Describe You</string>
    <string name="select_more_than_one_if_needed">Select more than one if needed</string>
    <string name="solo_artist">Solo artist</string>
    <string name="producer">Producer</string>
    <string name="band">Band</string>
    <string name="engineer">Engineer</string>
    <string name="primary_genre">Primary Genre</string>
    <string name="artist_name">Artist Name</string>
    <string name="title_activity_home">Tully</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_files_or_projects_yet">No Files or Projects Yet!</string>
    <string name="save_audio_files_here_to_get_started">Save audio files here to get \n started</string>
    <string name="ultrasound">Ultrasound</string>
    <string name="_18_items">18 items</string>
    <string name="search">Search</string>
    <string name="all">All</string>
    <string name="delete">Delete</string>
    <string name="sure_delete_message">Are you sure you want to delete selected items?</string>
    <string name="sure_delete_message_lyrics">Are you sure you want to delete selected lyrics?</string>
    <string name="sure_delete_message_recording">Are you sure you want to delete selected recording?</string>
    <string name="sure_delete_message_files">Are you sure you want to delete selected files?</string>
    <string name="sure_delete_message_title">Delete Selected Project ?</string>
    <string name="sure_delete_message_title_lyrics">Delete Selected Lyrics ?</string>
    <string name="sure_delete_message_title_recording">Delete Selected recording ?</string>
    <string name="sure_delete_message_title_file">Delete Selected File ?</string>
    <string name="nothing_was_selected">Nothing was selected</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="joyner_lucas">Joyner Lucas</string>
    <string name="you_finally_got_some_paper_couldn_t_wait_to_get_it_and_it_don_t_really_matter_cause_you_re_still_lame_no_matter">You finally got some paper couldn\'t wait to get it and it don\'t really matter \'cause you\'re still lame, No matter</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="set_up_one_touch_sign_in">Set Up One Touch Sign In</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="support">Support</string>
    <string name="submit_feedback">Submit Feedback</string>
    <string name="rate_tully">Rate Tully</string>
    <string name="about">About</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="logout">Logout</string>
    <string name="tully">TULLY</string>
    <string name="sure_to_delete_selected_files">delete selected files ?</string>
    <string name="project_name">Project name</string>
    <string name="title_activity_lyrics_list">LyricsListActivity</string>
    <string name="tap_on_the_to_create_your_first_lyrics">Tap on the + to create your first lyrics!</string>
    <string name="title_activity_lyrics">LyricsActivity</string>
    <string name="the_club_isn_t_the_best_place">The club isn\'t the best place…</string>
    <string name="no_project_assigned">No Project Assigned</string>
    <string name="title_activity_recording_listing">RecordingListingActivity</string>
    <string name="no_recordings_yet">No Recordings yet!</string>
    <string name="tap_on_the_plus_symbol_to_create_your_first_recording">Tap on the plus symbol to create your first recording</string>
    <string name="first_record">First Record</string>
    <string name="name_your_project">Name Your Project</string>
    <string name="rename_your_project">Rename Project</string>
    <string name="you_can_access_this_project_from_the_home_tab">You can access this project from the home tab.</string>
    <string name="create">CREATE</string>
    <string name="cancel_capital">CANCEL</string>
    <string name="title_activity_player_list">PlayerListActivity</string>
    <string name="nothing_to_listen_to_yet">Nothing to listen to yet!</string>
    <string name="save_an_audio_file_to_the_tully_app_you_can_then_access_it_here">Save an audio file to the Tully app, you can then access it here.</string>
    <string name="beats_v1_mp3">Beats V1.mp3</string>
    <string name="_9_76_mb">9.76 MB</string>
    <string name="click_here_to_start_writing">Click here to start writing</string>
    <string name="please_support_tully_by_rating_us_on_the_app_store_or_suggesting_us_how_we_can_improve">Please support Tully by rating us on the App Store or suggesting us how we can improve.</string>
    <string name="rate_us_5_stars">RATE US 5 STARS</string>
    <string name="you_can_access_this_project">You can access this project from the home tab</string>
    <string name="this_operation_is_sensitive_and_requires_recent_authentication_log_in_again_before_retrying_this_request">This operation is sensitive and requires recent authentication. Log in again before retrying this request.</string>
    <string name="re_authenticate">Re-Authenticate</string>
    <string name="new_password">New Password</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="update">Update</string>
    <string name="one_touch_sign_in">One Touch Sign In</string>
    <string name="turn_off_touch_id_anytime_from_here">Turn off Touch ID anytime from here</string>
    <string name="swipe_to_continue">Swipe to continue</string>
    <string name="select_a_word">Select a Word</string>
    <string name="meaning">Meaning</string>
    <string name="search_item">Search Item</string>
    <string name="login">LOGIN</string>
    <string name="select_genere">Select Genere</string>
    <string name="rename_file">Rename File</string>
    <string-array name="genere">
        <item>Alternative Music</item>
        <item>Blues</item>
        <item>Classical Music</item>
        <item>Country Music</item>
        <item>Dance Music</item>
        <item>Easy Listening</item>
        <item>Electronic Music</item>
        <item>European Music (Folk / Pop)</item>
        <item>Hip Hop / Rap</item>
        <item>Indie Pop</item>
        <item>Inspirational (incl. Gospel)</item>
        <item>Asian Pop (J-Pop, K-pop)</item>
        <item>Jazz</item>
        <item>Latin Music</item>
        <item>New Age</item>
        <item>Opera</item>
        <item>Pop (Popular music)</item>
        <item>R&amp;B / Soul</item>
        <item>Reggae</item>
        <item>Rock</item>
        <item>Singer / Songwriter (inc. Folk)</item>
        <item>World Music / Beats</item>
    </string-array>
    <string-array name="audio_output">
        <item>Speakers</item>
        <item>Audio Jack</item>
        <item>Bluetooth</item>
    </string-array>
    <string name="intercom_app_id">ne8l5lbm</string>
    <string name="intercom_app_key">android_sdk-43141efd47c445c64583d5a54e649ee50a6543ba</string>
    <string name="intercom_gcm_sender_id">768205758755</string>
    <string name="no_lyrics_yet">No Lyrics yet!</string>
    <string name="projects">Projects</string>
    <string name="lyrics">Lyrics</string>
    <string name="recording">Recordings</string>
    <string name="_0">0</string>
    <string name="beat_v1">Beat V1</string>
    <string name="_00_00">00:00</string>
    <string name="tully_is_working_with_top_producers_to_bring_you_the_perfect_beat_collection">Tully is working with top producers to bring you the perfect beat collection!</string>
    <string name="market_watch">Market Watch</string>
    <string name="market_place">Marketplace</string>
    <string name="get_notifed_when_the_market_opens">Get notifed when the market opens</string>
    <string name="stay_tuned">Stay tuned</string>
    <string name="we_will_notify_you_when_it_opens">We will notify you when it opens</string>
    <string name="learn_more">Learn More</string>
    <string name="_1">1</string>
    <string name="share">Share</string>
    <string name="note">Note</string>
    <string name="rename">Rename</string>
    <string name="player_list">Player List</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="player">Player</string>
    <string name="help">Help</string>
    <string name="tully_support">Tully Support</string>
    <string name="invite_via_email">Invite Via Email</string>
    <string name="email">Email</string>
    <string name="send">Send</string>
    <string name="invite_successfully_sent">Invite Successfully Sent</string>
    <string name="want_admin_access_to_your_web_portal">Want admin access to your web portal ?</string>
    <string name="web_access_gives_you_full_control_over_your_files_and_folders">Web access gives you full control over your files and folders.</string>
    <string name="submit">Submit</string>
    <string name="_2_57">2:57</string>
    <string name="_4_99">$4.99</string>
    <string name="write_record">Write - Record</string>
    <string name="link_sharing">Link Sharing</string>
    <string name="do_you_want_the_other_person_to_have_the_option_to_download">Do you want the other person to have the \n option to Download?</string>
    <string name="no">No</string>
    <string name="expire_after_1_listen">Expire after 1 listen</string>
    <string name="expire_after_24_hours">Expire after 24 hours</string>
    <string name="do_not_expire">Do Not Expire</string>
    <string name="yes">Yes</string>
    <string name="desc_song_write_record">Song-write, record ideas and create together all within Tully.</string>
</resources>