<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_player"
            android:icon="@drawable/ic_play"
            android:title="@string/player" />

        <item
            android:id="@+id/nav_write_record"
            android:icon="@drawable/ic_recordings"
            android:title="@string/write_record" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/market_place" />

        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_info_sign"
            android:title="@string/tully_support" />

    </group>

</menu>
