<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_record"
        android:orderInCategory="1"
        android:icon="@drawable/ic_record_icon"
        android:title="@string/record"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_music"
        android:orderInCategory="2"
        android:icon="@drawable/ic_music_icon"
        android:title="@string/write"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_copy"
        android:orderInCategory="3"
        android:icon="@drawable/ic_copyicon"
        android:title="@string/action_settings"
        app:showAsAction="always" />

</menu>
