<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/list_item"
    android:background="?attr/selectableItemBackground"
    android:clickable="true"
    android:paddingTop="16dp"
    android:paddingLeft="16dp"
    android:paddingStart="16dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusable="true">

    <TextView
        android:text="@string/_1"
        android:id="@+id/tv_index"
        android:textSize="18sp"
        android:textColor="@color/colorLightText"
        android:layout_centerVertical="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ImageView
        android:src="@drawable/pr_play"
        android:layout_toRightOf="@+id/tv_index"
        android:id="@+id/btn_play"
        android:layout_marginLeft="16dp"
        android:layout_width="34dp"
        android:layout_centerVertical="true"
        android:layout_height="34dp"
        android:layout_toEndOf="@+id/tv_index"
        android:layout_marginStart="12dp" />

    <LinearLayout
        android:layout_toRightOf="@id/btn_play"
        android:layout_toEndOf="@id/btn_play"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:paddingRight="100dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textColor="@color/colorPrimary"
            android:text="@string/ultrasound"
            android:ellipsize="end"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginRight="50dp"
            android:maxLines="1"
            android:textSize="16sp"
            android:id="@+id/tv_file_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp" />
        
        <TextView
            android:text="@string/joyner_lucas"
            android:textSize="12sp"
            android:id="@+id/tv_subtitle"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <TextView
        android:text="@string/_2_57"
        android:id="@+id/tv_file_size"
        android:layout_toLeftOf="@+id/price_btn"
        android:layout_centerVertical="true"
        android:layout_marginRight="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@+id/price_btn" />

    <Button
        android:text="@string/_4_99"
        android:id="@+id/price_btn"
        android:layout_marginRight="16dp"
        android:layout_centerVertical="true"
        android:textColor="@android:color/white"
        android:background="@drawable/price_btn"
        android:layout_alignParentEnd="true"
        android:layout_width="56dp"
        android:layout_height="28dp"
        android:layout_alignParentRight="true" />

    <View
        android:layout_below="@+id/btn_play"
        android:layout_marginTop="16dp"
        android:background="@drawable/border_bottom"
        android:layout_width="match_parent"
        android:layout_height="1dp" />

</RelativeLayout>