<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:padding="16dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:background="@android:color/white"
    android:layout_height="wrap_content">

    <TextView
        android:text="@string/rate_tully"
        android:id="@+id/title"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ImageView
        android:src="@drawable/rate_tully_logo"
        android:id="@+id/logo"
        android:layout_marginTop="10dp"
        android:layout_below="@id/title"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/please_support_tully_by_rating_us_on_the_app_store_or_suggesting_us_how_we_can_improve"
        android:layout_below="@id/logo"
        android:layout_marginTop="24dp"
        android:textColor="@color/colorLightText"
        android:id="@+id/txt"
        android:lineSpacingExtra="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="horizontal"
        android:gravity="end"
        android:layout_below="@+id/txt"
        android:layout_marginTop="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <Button
            android:background="@android:color/white"
            android:textColor="@color/colorPrimary"
            android:id="@+id/btn_popup_cancel"
            android:text="@string/cancel_capital"
            android:clickable="true"
            android:textSize="16sp"
            android:layout_marginRight="20dp"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:focusable="true"
            android:layout_marginEnd="20dp" />

        <Button
            android:background="@android:color/white"
            android:textColor="@color/colorAccent"
            android:id="@+id/btn_rate"
            android:text="@string/rate_us_5_stars"
            android:clickable="true"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:focusable="true" />

    </LinearLayout>


</RelativeLayout>