<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/btn_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_dialog_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/label_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/link_sharing"
        android:textColor="@android:color/white"
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_close" />

    <TextView
        android:id="@+id/label_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="42dp"
        android:layout_marginRight="42dp"
        android:layout_marginTop="28dp"
        android:layout_marginLeft="42dp"
        android:layout_marginStart="42dp"
        android:text="@string/do_you_want_the_other_person_to_have_the_option_to_download"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_title" />

    <Button
        android:id="@+id/btn_not_allow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:background="@drawable/app_whitebtn"
        android:text="@string/no"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_desc" />

    <Button
        android:id="@+id/btn_allow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="24dp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:background="@drawable/app_greenbtn"
        android:text="@string/yes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_desc" />

    <TextView
        android:id="@+id/tv_label_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/expire_after_1_listen"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/btn_not_allow"
        app:layout_constraintTop_toBottomOf="@+id/btn_not_allow" />

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/switch_expire_after_once"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="@+id/btn_allow"
        app:layout_constraintTop_toBottomOf="@+id/btn_allow" />

    <TextView
        android:id="@+id/tv_label_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/expire_after_24_hours"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="@+id/tv_label_one"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_one" />

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/switch_expire_after_one_hour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="@+id/switch_expire_after_once"
        app:layout_constraintTop_toBottomOf="@+id/switch_expire_after_once" />

    <TextView
        android:id="@+id/tv_label_three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/do_not_expire"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/tv_label_two"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_two" />

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/switch_expire_never"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:checked="true"
        app:layout_constraintEnd_toEndOf="@+id/switch_expire_after_one_hour"
        app:layout_constraintTop_toBottomOf="@+id/switch_expire_after_one_hour" />

    <android.support.v7.widget.AppCompatButton
        android:layout_width="0dp"
        android:id="@+id/btn_cp_url"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:text="@string/share"
        android:layout_height="wrap_content"
        android:background="@drawable/app_greenbtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>