<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tullyapp.tully.Engineer.EngineerAccessFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycle_view"
        android:layout_above="@+id/bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp" />

        <LinearLayout
            android:id="@+id/bottom_sheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/playerBackgroundColor"
            android:orientation="vertical"
            android:padding="16dp"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:maxLines="1"
                android:text="@string/want_admin_access_to_your_web_portal"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:lineSpacingExtra="5dp"
                android:text="@string/web_access_gives_you_full_control_over_your_files_and_folders"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_email"
                style="@style/FormEditTxtWhite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/email"
                android:inputType="textWebEmailAddress" />

            <Button
                android:id="@+id/btn_okay"
                style="@style/WhiteTextLabels"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/app_greenbtn"
                android:text="@string/submit" />

        </LinearLayout>

    </RelativeLayout>


</FrameLayout>
